# gmm_coverage

./: .gitignore  CMakeLists.txt  README.md  gmm_matrix.txt  package.xml  roadsGMM.ipynb  run.bash
include/gmm_coverage/: Graphics.h  Voronoi.h
launch/: centralized_gmm.launch.py  distri_gmm_calculator.launch.py  distributed_gmm.launch.py  flightmare_gmm.launch  gmm_distributed.launch  gmm_online_world.launch.py  roads_gmm.launch  world_gmm.launch.py
maps/colosseo/: colosseo.yaml
maps/desert/: desert.yaml
models/colosseo/: model.config  model.sdf
models/desert/: model.config  model.sdf
models/desert/meshes/: desert.dae
models/reggioemilia/: model.config  model.sdf
rviz/: gmm.rviz  roads_gmm.rviz
scripts/: clusters_gmm.py  gmm_coverage_example.py  gmm_publisher.py  gmm_visualizer.py  hsi.py  interface.py  plot_metrics.py  smoothprediction.py
src/: centralized_gmm.cpp  distributed_gmm.cpp  gmm_calc.cpp  gmm_test_node.cpp  gmm_visualizer.cpp  hs_interface.cpp  performance_eval.cpp  supervisor_gmm.cpp  target_publisher_node.cpp
worlds/: colosseo.world  desert.world  reggioemilia.world
